@@ -17,10 +17,6 @@ class Foo:
 Interface:
     from buildbot.tcompat import Interface
     class IFoo(Interface)
-
-providedBy:
-    from buildbot.tcompat import providedBy
-    assert providedBy(obj, IFoo)
 """
 
 import os
@@ -34,12 +30,9 @@ if hasattr(components, "interface"):
     # yes
     from zope.interface import implements
     from zope.interface import Interface
-    def providedBy(obj, iface):
-        return iface.providedBy(obj)
 else:
     # nope
     from twisted.python.components import Interface
-    providedBy = components.implements
 
 # waitForDeferred and getProcessOutputAndValue are twisted-2.0 things. If
 # we're running under 1.3, patch them into place. These versions are copied
