@@ -1,5 +1,9 @@
 2006-12-11  Brian Warner  <warner@lothar.com>
 
+	* buildbot/twcompat.py (providedBy): remove this method
+	* buildbot/*: turn all uses of providedBy(obj, iface) into
+	iface.providedBy(obj)
+
 	* buildbot/twcompat.py (maybeWait): remove this method, now that
 	we no longer maintain compatibility with Twisted<=1.3.0 .
 	Twisted-2.0.0 and later allow trial methods to return Deferreds
